--- a/styles/index.css
+++ b/styles/index.css
@@ -14,32 +14,49 @@ body{
 body p{
     font-size: 15px;
     color: hsl(217, 12%, 63%);
-    margin: 0px 0px 20px 0px;
+    margin: 0px;
 }
 body h1{
     font-weight:normal;
     text-decoration: none;
-    margin: 10px 0px 0px 0px;
+    margin: 0px 0px 0px 0px;
 }
 .rating-container{
     display: flex;
     flex-direction: column;
-    width: 300px;
-    padding: 15px;
-    background-color: hsl(216, 12%, 8%);
+    justify-content: space-around;
+    width: 400px;
+    height: 416px;
+    padding: 5px;
     color: #fff;
     border-radius: 20px;
     margin: 15px;
+    background-image:    radial-gradient(
+        at top,
+        hsl(213, 19%, 18%),
+        hsl(216, 12%, 8%)
+    );
 }
 .start-icon img{
     border-radius: 50px;
     background-color: hsl(213, 19%, 18%);
     padding: 10px;
+    margin-left:20px;
+}
+#title-container{
+    align-self: left;
+    margin-left: 20px;
+}
+#rating-text{
+    align-self: center;
+    width: 350px;
+    max-width: 400px;
+    text-align: left
 }
 #rating{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;   
+    justify-content: center;
 }
 #rating input{
     background-color: hsl(213, 19%, 18%);
@@ -47,11 +64,11 @@ body h1{
     border: none;
     width: 50px;
     height: 50px;
-    padding: 10px;
     text-decoration: none;
     text-align: center;
     color: hsl(217, 12%, 63%);
     font-family: 'OverPass', cursive;
+    margin-right: 20px;
 }
 #rating input:hover{
     background-color: hsl(25, 97%, 53%);
@@ -59,11 +76,12 @@ body h1{
 }
 #btn-submit{
     background-color: hsl(25, 97%, 53%);
+    width: 370px;
+    align-self: center;
     border-radius: 50px;
     border: none;
     text-align: center;
-    margin-top: 20px;
-    height: 50px;
+    height: 40px;
     color: #fff;
     font-family: 'OverPass', cursive;
     letter-spacing: 5px;
