--- a/styles/index.css
+++ b/styles/index.css
@@ -24,9 +24,8 @@ body h1{
 .rating-container{
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
     width: 400px;
-    height: 416px;
+    height: 350px;
     padding: 5px;
     color: #fff;
     border-radius: 20px;
@@ -37,17 +36,21 @@ body h1{
         hsl(216, 12%, 8%)
     );
 }
-.start-icon img{
+.rating-container img{
     border-radius: 50px;
     background-color: hsl(213, 19%, 18%);
     padding: 10px;
-    margin-left:20px;
+    margin-bottom: 10px;
+    width: 20px;
 }
 #title-container{
     align-self: left;
     margin-left: 20px;
+    margin-top: 30px;
+    margin-bottom: 20px;
 }
 #rating-text{
+    margin-top: 0px;
     align-self: center;
     width: 350px;
     max-width: 400px;
@@ -57,6 +60,8 @@ body h1{
     display: flex;
     flex-direction: row;
     justify-content: center;
+    margin-top: 0px;
+    margin-bottom: 20px;
 }
 #rating input{
     background-color: hsl(213, 19%, 18%);
@@ -84,41 +89,54 @@ body h1{
     height: 40px;
     color: #fff;
     font-family: 'OverPass', cursive;
-    letter-spacing: 5px;
+    letter-spacing: 3px;
     font-weight: 400;
 }
 .rating-success{
+    width: 400px;
+    height: 350px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 15px;
-    background-color: hsl(216, 12%, 8%);
+    padding: 5px;
+    background-image:    radial-gradient(
+        at top,
+        hsl(213, 19%, 18%),
+        hsl(216, 12%, 8%)
+    );
     border-radius: 20px;
     margin: 15px;
     display: none;
-    width: 300px;
 }
 .rating-success img{
-    width: 50%;
-    height: 50%;
+    width: 40%;
+    height: 30%;
 }
 .rating-success h1{
     color: #fff;
+    font-size: 25px;
+    margin-top: 20px;
+    margin-bottom: 0px;
 }
 .rating-success p{
     text-align: center;
     margin-top: 15px;
+    margin-top: 0px;
+    max-width: 355px;
 }
 #rating-note{
     color: hsl(25, 97%, 53%);
     background-color: hsl(213, 19%, 18%);
     border-radius: 20px;
     margin-top: 20px;
-    padding: 5px;
+    padding: 7px;
+    font-size: 15px;
+    font-weight: thin;
 }
 .attribution{
 color: #fff;
+margin-top:30px
 }
 .hide{
     display: none;
